swbcppmakedir = $(top_srcdir)/bindings/bcppmake

EXTRA_DIST += $(swbcppmakedir)/MainCLXTest.dfm
EXTRA_DIST += $(swbcppmakedir)/MainTest.cpp
EXTRA_DIST += $(swbcppmakedir)/MainTest.h
EXTRA_DIST += $(swbcppmakedir)/clxtest.bpr
EXTRA_DIST += $(swbcppmakedir)/sword.bpf
EXTRA_DIST += $(swbcppmakedir)/sword.c
EXTRA_DIST += $(swbcppmakedir)/test.cpp
EXTRA_DIST += $(swbcppmakedir)/MainCLXTest.cpp
EXTRA_DIST += $(swbcppmakedir)/MainCLXTest.h
EXTRA_DIST += $(swbcppmakedir)/MainTest.dfm
EXTRA_DIST += $(swbcppmakedir)/Makefile.am
EXTRA_DIST += $(swbcppmakedir)/clxtest.cpp
EXTRA_DIST += $(swbcppmakedir)/sword.bpr
EXTRA_DIST += $(swbcppmakedir)/sworddll.bpg
