keysdir = $(top_srcdir)/src/keys

libsword_la_SOURCES += $(keysdir)/swkey.cpp
libsword_la_SOURCES += $(keysdir)/listkey.cpp
libsword_la_SOURCES += $(keysdir)/strkey.cpp
libsword_la_SOURCES += $(keysdir)/treekey.cpp
libsword_la_SOURCES += $(keysdir)/treekeyidx.cpp
libsword_la_SOURCES += $(keysdir)/versekey.cpp
libsword_la_SOURCES += $(keysdir)/versetreekey.cpp

