modulesdir = $(top_srcdir)/src/modules

libsword_la_SOURCES += $(modulesdir)/swmodule.cpp

include ../src/modules/common/Makefile.am
include ../src/modules/filters/Makefile.am
include ../src/modules/genbook/Makefile.am
include ../src/modules/texts/Makefile.am
include ../src/modules/comments/Makefile.am
include ../src/modules/lexdict/Makefile.am
