swbcppdir = $(top_srcdir)/tests/bcppmake

EXTRA_DIST += $(swbcppdir)/filtertest.bpf  
EXTRA_DIST += $(swbcppdir)/filtertest.bpr  
EXTRA_DIST += $(swbcppdir)/libsword.bpf  
EXTRA_DIST += $(swbcppdir)/libsword.bpr  
EXTRA_DIST += $(swbcppdir)/mgrtest.bpf
EXTRA_DIST += $(swbcppdir)/mgrtest.bpr
EXTRA_DIST += $(swbcppdir)/parsekey.bpf
EXTRA_DIST += $(swbcppdir)/parsekey.bpr
EXTRA_DIST += $(swbcppdir)/tests.bpg
