swbcppmakedir = $(top_srcdir)/utilities/bcppmake

EXTRA_DIST += $(swbcppmakedir)/imp2ld.bpf
EXTRA_DIST += $(swbcppmakedir)/mod2imp.bpf
EXTRA_DIST += $(swbcppmakedir)/osis2mod.bpf
EXTRA_DIST += $(swbcppmakedir)/utilities.bpg
EXTRA_DIST += $(swbcppmakedir)/imp2ld.bpr
EXTRA_DIST += $(swbcppmakedir)/mod2imp.bpr
EXTRA_DIST += $(swbcppmakedir)/osis2mod.bpr
EXTRA_DIST += $(swbcppmakedir)/vpl2mod.bpf
EXTRA_DIST += $(swbcppmakedir)/cipherraw.bpf
EXTRA_DIST += $(swbcppmakedir)/imp2vs.bpf
EXTRA_DIST += $(swbcppmakedir)/mod2osis.bpf
EXTRA_DIST += $(swbcppmakedir)/step2vpl.bpf
EXTRA_DIST += $(swbcppmakedir)/vpl2mod.bpr
EXTRA_DIST += $(swbcppmakedir)/cipherraw.bpr
EXTRA_DIST += $(swbcppmakedir)/imp2vs.bpr
EXTRA_DIST += $(swbcppmakedir)/mod2osis.bpr
EXTRA_DIST += $(swbcppmakedir)/step2vpl.bpr
EXTRA_DIST += $(swbcppmakedir)/vs2osisref.bpf
EXTRA_DIST += $(swbcppmakedir)/diatheke.bpf
EXTRA_DIST += $(swbcppmakedir)/libsword.bpf
EXTRA_DIST += $(swbcppmakedir)/mod2vpl.bpf
EXTRA_DIST += $(swbcppmakedir)/stepdump.bpf
EXTRA_DIST += $(swbcppmakedir)/vs2osisref.bpr
EXTRA_DIST += $(swbcppmakedir)/diatheke.bpr
EXTRA_DIST += $(swbcppmakedir)/libsword.bpr
EXTRA_DIST += $(swbcppmakedir)/mod2vpl.bpr  
EXTRA_DIST += $(swbcppmakedir)/stepdump.bpr
EXTRA_DIST += $(swbcppmakedir)/xml2gbs.bpf
EXTRA_DIST += $(swbcppmakedir)/imp2gbs.bpf
EXTRA_DIST += $(swbcppmakedir)/mkfastmod.bpf
EXTRA_DIST += $(swbcppmakedir)/mod2zmod.bpf
EXTRA_DIST += $(swbcppmakedir)/xml2gbs.bpr
EXTRA_DIST += $(swbcppmakedir)/imp2gbs.bpr
EXTRA_DIST += $(swbcppmakedir)/mkfastmod.bpr
EXTRA_DIST += $(swbcppmakedir)/mod2zmod.bpr
