swkylixmakedir = $(top_srcdir)/utilities/kylixmake

EXTRA_DIST += $(swkylixmakedir)/libsword.bpf
EXTRA_DIST += $(swkylixmakedir)/mod2zmod.bpf
EXTRA_DIST += $(swkylixmakedir)/mod2zmod.res
EXTRA_DIST += $(swkylixmakedir)/libsword.bpr
EXTRA_DIST += $(swkylixmakedir)/mod2zmod.bpr
EXTRA_DIST += $(swkylixmakedir)/utilities.bpg
